@@ -781,50 +781,9 @@ class CreateDistroCommand(Command):
             self.create_template(
                 template, output_dir, vars)
 
-        found_setup_py = False
-        paster_plugins_mtime = None
-        if os.path.exists(os.path.join(output_dir, 'setup.py')):
-            # Grab paster_plugins.txt's mtime; used to determine if the
-            # egg_info command wrote to it
-            try:
-                egg_info_dir = pluginlib.egg_info_dir(output_dir, dist_name)
-            except IOError:
-                egg_info_dir = None
-            if egg_info_dir is not None:
-                plugins_path = os.path.join(egg_info_dir, 'paster_plugins.txt')
-                if os.path.exists(plugins_path):
-                    paster_plugins_mtime = os.path.getmtime(plugins_path)
-
-            self.run_command(sys.executable, 'setup.py', 'egg_info',
-                             cwd=output_dir,
-                             # This shouldn't be necessary, but a bug in setuptools 0.6c3 is causing a (not entirely fatal) problem that I don't want to fix right now:
-                             expect_returncode=True)
-            found_setup_py = True
-        elif self.verbose > 1:
-            print 'No setup.py (cannot run egg_info)'
-
         package_dir = vars.get('package_dir', None)
         if package_dir:
             output_dir = os.path.join(output_dir, package_dir)
-
-        # With no setup.py this doesn't make sense:
-        if found_setup_py:
-            # Only write paster_plugins.txt if it wasn't written by
-            # egg_info (the correct way). leaving us to do it is
-            # deprecated and you'll get warned
-            egg_info_dir = pluginlib.egg_info_dir(output_dir, dist_name)
-            plugins_path = os.path.join(egg_info_dir, 'paster_plugins.txt')
-            if len(egg_plugins) and (not os.path.exists(plugins_path) or \
-                    os.path.getmtime(plugins_path) == paster_plugins_mtime):
-                if self.verbose:
-                    print >> sys.stderr, \
-                        ('Manually creating paster_plugins.txt (deprecated! '
-                         'pass a paster_plugins keyword to setup() instead)')
-                for plugin in egg_plugins:
-                    if self.verbose:
-                        print 'Adding %s to paster_plugins.txt' % plugin
-                    if not self.simulate:
-                        pluginlib.add_plugin(egg_info_dir, plugin)
         
         if self.options.svn_repository:
             self.add_svn_repository(vars, output_dir)
